# Efficient-lesion-estimation

./: .gitignore  README.md  pyproject.toml
False_positive_control/: bspline.py  data_simulation.py  inference.py  jobs.txt  model.py  plot.py  regression.py  run.py  test.py  util.py
GRF_data/: GRFsim_rescomp_nonzero.R
brain_lesion/: FI_std.py  app.py  brain_regression.py  bspline.py  data_simulation.py  inference.py  model.py  plot.py  regression.py  run.py  test.py  util.py
experiment/: analyze_eigenspectrum.py  approximate_model_validity.py  data_simulation.py  debug.py  evaluation.py  inference.py  jobs.txt  jobs_Bernoulli_logit.txt  jobs_Poisson_log.txt  plot.py  plot_varying_sample_size.py  regression.py  run.py  test.py  test_RR_map.py  test_bias_std_mse.py  test_polynomial_order.py  test_qr_decomposition.py  test_regression.py  test_table.py  util.py
simulation_approximate_model/: MC_bias_std.py  data_simulation.py  inference.py  model.py  plot.py  regression.py  run.py  sandwich_std.py  test1.py
