[project]
name = "efficient-lesion-estimation"
version = "0.1.0"
description = "Efficient spatial statistical inference for brain lesion analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "dask>=2025.2.0",
    "matplotlib>=3.7.2",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "numpy>=1.24.4",
    "opt-einsum>=3.3.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.11.2",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "torch>=2.0.1",
    "tqdm>=4.67.3",
]
